adding company linkedin page url

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <ul class="home-social">
             <li>
-                <a href="#0"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+                <a href="https://linkedin.com/company/jaffoo-solutions"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
             </li>
             <li>
                 <a href="mailto:info@jaffoosolutions.com"><i class="fas fa-envelope" aria-hidden="true"></i></a>
@@ -232,7 +232,7 @@
                     <h4>Follow Us</h4>
 
                     <ul class="contact-list h4">
-                        <li><a href="#0">LinkedIn</a></li>
+                        <li><a href="https://linkedin.com/company/jaffoo-solutions">LinkedIn</a></li>
                     </ul>
                 </div>
 
