instruct customer on how to contact

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 data-num="03" class="subhead">Get In Touch</h3>
-                <h1 class="display-1 display-1--light">Are you ready to transform your business?</h1>
+                <h1 class="display-1 display-1--light">Are you ready to transform your business?<br>Drop us a line at <a href="mailto:info@jaffoosolutions.com">info@jaffoosolutions.com</a></h1>
             </div>
 
             <div class="row contact-infos">
