--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
             <div class="row home-content__main">
 
                 <h1>
-                Move your business<br>
-                to the Cloud<br>
-                with confidence.
+                Unlock the full potential of your business with our<br>
+                enterprise-grade and security-focused cloud platform.
                 </h1>
 
                 <div class="home-content__button">
