--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
             <div class="row home-content__main">
 
                 <h1>
-                Unlock the full potential of your business with our<br>
-                enterprise-grade and security-focused cloud platform.
+                Enterprise-grade and security-focused cloud platform.
                 </h1>
 
                 <div class="home-content__button">
