--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <div class="row home-content__main">
 
                 <h1>
-                Enterprise-grade and security-focused cloud platform.
+                Enterprise-grade and<br>
+                security-focused cloud platform.
                 </h1>
 
                 <div class="home-content__button">
@@ -130,20 +131,11 @@
                 <p class="lead">
                 Founded in 2019, our London-based information technology consulting firm stands as a beacon of innovation and excellence in the realm of cloud technology. We are dedicated to crafting cloud-native platforms of unparalleled quality, leveraging industry-leading cloud providers such as Amazon Web Services and Microsoft Azure.
                 <br>
-                From inception to deployment, we oversee every facet of your cloud platform project, ensuring its seamless alignment with your strategic vision. Our unwavering commitment centres on delivering dependable, cost-effective, and highly available platforms that form the bedrock of your digital success.
-                <br>
                 With a decade of experience in delivering transformative digital projects across the public and private sectors in the UK, our mastery of cloud technologies, infrastructure as code, serverless computing, function as a service, and containerization is unparalleled. This wealth of experience positions us as your trusted partner for greenfield and brownfield digital transformation initiatives.
                 <br>
                 We are firm believers in the power of cloud technology to revolutionise businesses. Our approach draws from proven principles, patterns, and processes to assess, strategise, and implement solutions that enable your enterprise to harness the security, scalability, and reliability of the cloud while drastically reducing time to market.
                 <br>
                 Whether you envision a cloud-native platform, a hybrid infrastructure, or a modernization of your existing setup, our consultants are armed with the knowledge and experience needed to design, build, and optimise platforms tailored precisely to your unique requirements.
-                <br>
-                Our cloud success strategy follows a three-phase approach:
-                <ol>
-                <li>Assessment - We begin by comprehensively evaluating your current IT landscape, identifying strengths and opportunities for improvement.</li>
-                <li>Planning - With a thorough understanding of your needs, we craft a meticulous roadmap for your cloud journey, ensuring that it aligns with your business objectives.</li>
-                <li>Implementation - We execute the plan with precision, implementing solutions that are tailored to your specific business requirements, resulting in a seamless transition to the cloud.</li>
-                </ol>
                 <br>
                 At our core, we are architects of transformation, guiding you through each phase of your successful cloud adoption journey. With our unwavering commitment to excellence, we invite you to embark on a collaborative partnership that will redefine your organisation's technological landscape.                    
                 </p>
