--- a/index.html
+++ b/index.html
@@ -130,15 +130,13 @@
                 Seasoned Cloud Platform Experts - Your Trusted IT Consultancy Partner with Proven Experience in Cloud Native Transformation.
                 </h1>
                 <p class="lead">
-                Founded in 2019, our London-based information technology consulting firm stands as a beacon of innovation and excellence in the realm of cloud technology. We are dedicated to crafting cloud-native platforms of unparalleled quality, leveraging industry-leading cloud providers such as Amazon Web Services and Microsoft Azure.
+                Founded in 2019, our London-based information technology consulting firm stands as a beacon of innovation and excellence in the realm of cloud technology. We are dedicated to building secure, resilient and scalable cloud-native platforms in Amazon Web Services and Microsoft Azure.
                 <br><br>
-                With a decade of experience in delivering transformative digital projects across the public and private sectors in the UK, our mastery of cloud technologies, infrastructure as code, serverless computing, function as a service, and containerisation is unparalleled. This wealth of experience positions us as your trusted partner for greenfield and brownfield digital transformation initiatives.
+                We have over a decade of experience adopting and delivering cloud platforms using infrastructure as code, serverless computing, function as a service, and containerisation technologies, across the public and private sectors in the UK. This wealth of experience positions us as your trusted partner for greenfield and brownfield digital transformation initiatives.
                 <br><br>
-                We are firm believers in the power of cloud technology to revolutionise businesses. Our approach draws from proven principles, patterns, and processes to assess, strategise, and implement solutions that enable your enterprise to harness the security, scalability, and reliability of the cloud while drastically reducing time to market.
+                Whether you envision a cloud-native platform, a hybrid infrastructure, or a modernisation of your existing setup, our consultants have the knowledge and experience needed to design, build, and optimise platforms tailored precisely to your unique requirements.
                 <br><br>
-                Whether you envision a cloud-native platform, a hybrid infrastructure, or a modernisation of your existing setup, our consultants are armed with the knowledge and experience needed to design, build, and optimise platforms tailored precisely to your unique requirements.
-                <br><br>
-                At our core, we are architects of transformation, guiding you through each phase of your successful cloud adoption journey. With our unwavering commitment to excellence, we invite you to embark on a collaborative partnership that will redefine your organisation's technological landscape.                    
+                We are here to guide you through each phase of your successful cloud adoption journey.          
                 </p>
             </div>
         </div>
@@ -157,43 +155,19 @@
                   for your workloads in the Cloud.
                 </h1>
                 <p class="lead lead-light">
-                  We provide the following services to accelerate and de-risk your cloud adoption and migration
-                  approaches and shape up a cloud operating model for your infrastructure and software.
+                    We offer the following services to guide you through your cloud journey.
                 </p>
             </div>
         </div>
 
-        <div class="row services-list block-1-6">
-
-            <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Platform Build & Migration</h4>
-                <img src="images/cloud-computing.svg" alt="Cloud Platform Setup">
-            </div>
-
-            <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Cloud-native Development</h4>
-                <img src="images/cloud-native-dev.svg" alt="Cloud-native Development">
-            </div>
-
-            <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Microservices Architecture</h4>
-                <img src="images/micro.svg" alt="Microservices Architecture">
-            </div>
-
-            <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Serverless Computing</h4>
-                <img src="images/serverless.svg" alt="Serverless Computing">
-            </div>
-
-            <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Delivery Pipelines</h4>
-                <img src="images/cicd.svg" alt="Continuous Integration & Delivery Pipelines">
-            </div>
-
-            <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Logging & Monitoring</h4>
-                <img src="images/mon.svg" alt="cloud monitoring">
-            </div>
+        <div class="row services-list">
+            <div>
+                <ul>
+                    <ol>Cloud Landing Zone - A well-architected framework which establishes a secure and compliant foundation for organisations adopting the cloud."</ol>
+                    <ol>Cloud Platform - A comprehensive suite of cloud-based services and infrastructure that enables the development, deployment, and management of applications and data in a scalable, cost-effective, and flexible manner.</ol>
+                    <ol>Cloud Application - A software application designed and optimised to fully leverage the cloud's flexibility, scalability, and automation.</ol>
+                </ul>
+            </div>                   
             <div class="row contact-bottom">
                 <div class="col-five tab-full contact-button" data-aos="fade-up">
                     <a href="#contact" class="smoothscroll btn btn-animatedbg">
