--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="row services-list">
             <div>
                 <ul>
-                    <ol>Cloud Landing Zone - A well-architected framework which establishes a secure and compliant foundation for organisations adopting the cloud."</ol>
+                    <ol>Cloud Landing Zone - A well-architected framework which establishes a secure and compliant foundation for organisations adopting the cloud.</ol>
                     <ol>Cloud Platform - A comprehensive suite of cloud-based services and infrastructure that enables the development, deployment, and management of applications and data in a scalable, cost-effective, and flexible manner.</ol>
                     <ol>Cloud Application - A software application designed and optimised to fully leverage the cloud's flexibility, scalability, and automation.</ol>
                 </ul>
