--- a/index.html
+++ b/index.html
@@ -160,14 +160,19 @@
             </div>
         </div>
 
-        <div class="row services-list">
-            <div>
-                <ul>
-                    <ol>Cloud Landing Zone - A well-architected framework which establishes a secure and compliant foundation for organisations adopting the cloud.</ol>
-                    <ol>Cloud Platform - A comprehensive suite of cloud-based services and infrastructure that enables the development, deployment, and management of applications and data in a scalable, cost-effective, and flexible manner.</ol>
-                    <ol>Cloud Application - A software application designed and optimised to fully leverage the cloud's flexibility, scalability, and automation.</ol>
-                </ul>
-            </div>                   
+        <div class="row services-list block-1-6">
+            <div class="col-block" data-aos="fade-up">
+                <h4 align="center">Define Cloud Native Strategy</h4>
+                <img src="" alt="Cloud Native Strategy">
+            </div>
+            <div class="col-block" data-aos="fade-up">
+                <h4 align="center">Setup Cloud Landing Zone</h4>
+                <img src="" alt="Cloud Landing Zone">
+            </div>
+            <div class="col-block" data-aos="fade-up">
+                <h4 align="center">Build Cloud Native Application Platform</h4>
+                <img src="" alt="Cloud Platform">
+            </div>
             <div class="row contact-bottom">
                 <div class="col-five tab-full contact-button" data-aos="fade-up">
                     <a href="#contact" class="smoothscroll btn btn-animatedbg">
