--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
         <div class="row services-list block-1-6">
             <div class="col-block" data-aos="fade-up">
                 <h4 align="center">Define Cloud Native Strategy</h4>
-                <img src="" alt="Cloud Native Strategy">
+                <img src="images/strategy.jpg" alt="Cloud Native Strategy">
             </div>
             <div class="col-block" data-aos="fade-up">
                 <h4 align="center">Setup Cloud Landing Zone</h4>
-                <img src="" alt="Cloud Landing Zone">
+                <img src="images/strategy.jpg" alt="Cloud Landing Zone">
             </div>
             <div class="col-block" data-aos="fade-up">
                 <h4 align="center">Build Cloud Native Application Platform</h4>
-                <img src="" alt="Cloud Platform">
+                <img src="images/strategy.jpg" alt="Cloud Platform">
             </div>
             <div class="row contact-bottom">
                 <div class="col-five tab-full contact-button" data-aos="fade-up">
