--- a/index.html
+++ b/index.html
@@ -130,13 +130,11 @@
                 Seasoned Cloud Platform Experts - Your Trusted IT Consultancy Partner with Proven Experience in Cloud Native Transformation.
                 </h1>
                 <p class="lead">
-                Founded in 2019, our London-based information technology consulting firm stands as a beacon of innovation and excellence in the realm of cloud technology. We are dedicated to building secure, resilient and scalable cloud-native platforms in Amazon Web Services and Microsoft Azure.
+                Founded in 2019, our London-based IT consulting firm specializes in building secure, resilient, and scalable cloud-native platforms on AWS and Azure.
                 <br><br>
-                We have over a decade of experience adopting and delivering cloud platforms using infrastructure as code, serverless computing, function as a service, and containerisation technologies, across the public and private sectors in the UK. This wealth of experience positions us as your trusted partner for greenfield and brownfield digital transformation initiatives.
+                With over a decade of experience in infrastructure as code, serverless computing, FaaS, and containerisation across the UK’s public and private sectors, we are your trusted partner for greenfield and brownfield digital transformation.
                 <br><br>
-                Whether you envision a cloud-native platform, a hybrid infrastructure, or a modernisation of your existing setup, our consultants have the knowledge and experience needed to design, build, and optimise platforms tailored precisely to your unique requirements.
-                <br><br>
-                We are here to guide you through each phase of your successful cloud adoption journey.          
+                Whether you need a cloud-native platform, hybrid infrastructure, or modernisation of your existing setup, our experts design, build, and optimise solutions tailored to your needs. We guide you through every stage of your cloud adoption journey.        
                 </p>
             </div>
         </div>
@@ -162,15 +160,24 @@
 
         <div class="row services-list block-1-2">
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Define Cloud Native Strategy</h4>
+                <h4 align="left">Cloud Consulting & Strategy</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Setup Cloud Landing Zone</h4>
+                <h4 align="left">Cloud Platform Engineering</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Build Cloud Native Application Platform</h4>
+                <h4 align="left">Cloud Security & Resilience</h4>
+            </div>
+            <br><br>
+            <div class="col-block" data-aos="fade-up">
+                <h4 align="left">Cloud Cost Optimisation</h4>
+            </div>
+            <br><br>
+            <br><br>
+            <div class="col-block" data-aos="fade-up">
+                <h4 align="left">AI-Driven Cloud Observability</h4>
             </div>
             <br><br>
             <div class="row contact-bottom">
