--- a/index.html
+++ b/index.html
@@ -160,24 +160,29 @@
 
         <div class="row services-list block-1-2">
             <div class="col-block" data-aos="fade-up">
-                <h4 align="left">Cloud Consulting & Strategy</h4>
+                <h4 align="center">Cloud Consulting & Strategy</h4>
+                <ul>
+                    <li>Cloud strategy and operating model</li>
+                    <li>Cloud infrastructure architecture</li>
+                    <li>Cloud application and data migration</li>
+                </ul>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="left">Cloud Platform Engineering</h4>
+                <h4 align="center">Cloud Platform Engineering</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="left">Cloud Security & Resilience</h4>
+                <h4 align="center">Cloud Security & Resilience</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="left">Cloud Cost Optimisation</h4>
+                <h4 align="center">Cloud Cost Optimisation</h4>
             </div>
             <br><br>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="left">AI-Driven Cloud Observability</h4>
+                <h4 align="center">AI-Driven Cloud Observability</h4>
             </div>
             <br><br>
             <div class="row contact-bottom">
