--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <div class="row services-list block-1-2">
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Cloud Consulting & Strategy</h4>
+                <h4 align="center">Cloud Consulting - </h4><p>strategy, operating model and roadmap.</p>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
