--- a/index.html
+++ b/index.html
@@ -160,24 +160,24 @@
 
         <div class="row services-list block-1-2">
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Cloud Consulting - </h4><p>strategy, operating model and roadmap.</p>
+                <h4 align="center">Cloud Consulting - strategy, operating model and roadmap</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Cloud Platform Engineering</h4>
+                <h4 align="center">Cloud Platform Engineering - cloud native platforms and shared services to support SDLC</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Cloud Security & Resilience</h4>
+                <h4 align="center">Cloud Security & Resilience - security best practices, guardrails and compliance & governance</h4>
             </div>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">Cloud Cost Optimisation</h4>
+                <h4 align="center">Cloud Optimisation - performance turning and cost optimisation</h4>
             </div>
             <br><br>
             <br><br>
             <div class="col-block" data-aos="fade-up">
-                <h4 align="center">AI-Driven Cloud Observability</h4>
+                <h4 align="center">AI-Driven Cloud Observability - AI powered insights & anomaly detection and automated threat detection & remediation</h4>
             </div>
             <br><br>
             <div class="row contact-bottom">
